@@ -3,7 +3,7 @@ use ExtUtils::MakeMaker;
 my $prereqs = {
   HTTP::Server::Simple::Mason => 0.13,
   File::HomeDir  => 0.86,
-  File::Type     => 0.22,
+  Media::Type::Simple => 0.02,
   Net::Server    => 0.97,
   Test::More     => 0.86,
 
